<resources>
    <string name="app_name">IUMApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">"Benvenuto !"</string>
    <string name="welcome_guest">"Sentiti libero di guardarti intorno, Ospite!"</string>

    <string name="invalid_username">Email non valida</string>
    <string name="invalid_password">La password deve contenere >5 caratteri</string>
    <string name="login_failed">"Accesso fallito: controlla le credenziali"</string>
    <string name="title_activity_main">Booker</string>
    <string name="title_reserve_lesson">Prenota le ripetizioni</string>
    <string name="title_my_reservations">Le mie ripetizioni</string>
    <string name="title_catalogue">Catalogo ripetizioni</string>
    <string name="action_guest_in">Accedi come Ospite</string>
    <string name="guest_lock_out">Accedi come Utente per sbloccare questa funzionalità</string>
    <string name="action_settings">Impostazioni</string>
    <string name="toolbar_sign_out">Logout</string>
    <string name="day_monday">Lun</string>
    <string name="day_tuesday">Mar</string>
    <string name="day_wednesday">Mer</string>
    <string name="day_thursday">Gio</string>
    <string name="day_friday">Ven</string>
    <string name="show_less">show less</string>
    <string name="show_more">show more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teacher_choice">TeacherChoice</string>
</resources>
