<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/reserve_lesson">

    <fragment
        android:id="@+id/reserve_lesson"
        android:name="com.example.iumapp.ui.reservelesson.ReserveLessonFragment"
        android:label="@string/title_reserve_lesson"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/my_reservations"
        android:name="com.example.iumapp.ui.myreservations.ReservationsFragment"
        android:label="@string/title_my_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/catalogue"
        android:name="com.example.iumapp.ui.catalogue.CatalogueFragment"
        android:label="@string/title_catalogue"
        tools:layout="@layout/fragment_catalogue" />

</navigation>